# maven-course

./: LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug-report.yml
assignments/week_01/: README.md
assignments/week_01/langgraph-demo-agent/: .env_example  agent.py  requirements.txt
assignments/week_02/: README.md  Week2Assignment.ipynb
assignments/week_02/langgraph-demo-agent/: agent.py
assignments/week_02/proposal-generation-agent/: .env_example  agent.py  requirements.txt
assignments/week_03/: README.md  Week3Assignment.ipynb
assignments/week_03/proposal-and-roi-generation-agent/: agent.py  prompts.py
assignments/week_03/proposal-generation-agent/: agent.py
assignments/week_04/: README.md  Week4Assignment.ipynb
assignments/week_04/critique-multi-agent/: agent.py  requirements.txt
assignments/week_05/: README.md  gradio_ui.py
learning-path-exercises/: Exercise1-RAGApp.ipynb  Exercise2-AgenticApp.ipynb  Exercise3-MultiAgentApp.ipynb
workshop/week2/: Agentic_RAG_System.ipynb  Agentic_RAG_System_with_ArXiv_+_Web_Fallback_.ipynb  README.md
workshop/week3/: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  chainlit.md  pyproject.toml  requirements-dev.txt  requirements.txt
workshop/week3/evals/: run_evals.py
workshop/week3/evals/data/: questions.yaml
workshop/week3/evals/data/prompts/: llm_judge_system_prompt.md  llm_judge_user_prompt_template.md
workshop/week3/evals/utils/: __init__.py  dataset.py  path.py  prompt.py
workshop/week3/src/: README.md  __init__.py  main.py
